# Fourio

./: .env.example  .gitignore  Dockerfile  LICENCE  Makefile  README.MD  README_DOCKER.md  README_MANUAL.md  cli.py  cli_logic.py  docker-compose.hybrid.yml  docker-compose.mongo.yml  docker-compose.yml  pyproject.toml  requirements.txt
app/: main.py
app/api/: fingerprints.py  recordings.py  router.py  songs.py
app/core/: fft.py  fingerprint.py  shazam.py  spectrogram.py
app/db/: background_job.py  db_clients.py  hybrid_client.py  mongo_client.py  redis_client.py  sqlite_client.py
app/models/: model.py
app/services/spotify/: download_manager.py  utils.py  youtube_service.py
app/services/wav/: wav_converter.py  wav_io.py
app/utils/: file_io.py  logger_setup.py  utils.py
backend/: cli.py  cli_logic.py  cmd.py  main.py  pyproject.toml
backend/app/: main.py
backend/app/api/: fingerprints.py  recordings.py  router.py  songs.py
backend/app/core/: fft.py  fingerprint.py  shazam.py  spectrogram.py
backend/app/db/: db_client.py  db_clients.py  mongo_client.py  sqlite_client.py
backend/app/models/: model.py
backend/app/services/spotify/: download_manager.py  spotify_service.py  utils.py  youtube_service.py
backend/app/services/wav/: convert.py  wav_converter.py  wav_io.py
backend/app/utils/: file_io.py
