[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.14.2",
    "fastapi>=0.119.0",
    "google-api-python-client>=2.186.0",
    "google-auth-httplib2>=0.2.1",
    "google-auth-oauthlib>=1.2.3",
    "librosa>=0.11.0",
    "lxml>=6.0.2",
    "motor>=3.7.1",
    "numpy>=2.3.4",
    "pydantic>=2.12.3",
    "pymongo>=4.15.3",
    "python-dotenv>=1.1.1",
    "python-multipart>=0.0.20",
    "requests>=2.32.5",
    "scipy>=1.16.2",
    "uvicorn[standard]>=0.38.0",
]
